solucion muchos bugs
solucion

--- a/Sistema/contable/templates/Base/base.html
+++ b/Sistema/contable/templates/Base/base.html
@@ -63,7 +63,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-money-check-alt"></i>
+            <i class="fas fa-book-open"></i>
             <span>Planilla</span>
           </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
@@ -73,19 +73,19 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/planilla">
-            <i class="fas fa-book-open"></i>
-            <span>Planilla</span></a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="/prorrateo">
             <i class="fas fa-book"></i>
             <span>Prorrateo</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/kardex">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fab fa-kickstarter-k"></i>
-            <span>Kardex</span></a>
+            <span>Kardex</span>
+            </a>
+                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    <a class="dropdown-item" href="/kardex"><i class="fas fa-eye"></i> Ver</a>
+                    <a class="dropdown-item" href="/OF/"><i class="fas fa-plus"></i>Ordenes de fabricacion</a>
+                </div>
             </li>
         </ul>
         <div id="content-wrapper">
